--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -227,6 +227,23 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/aiScan"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/home_rect"
+                android:contentDescription="@string/aiScan"
+                android:drawableTop="@drawable/ai_scan"
+                android:elevation="8dp"
+                android:fontFamily="@font/sfbold"
+                android:padding="8dp"
+                android:text="@string/aiScan"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
