--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -79,6 +79,7 @@
             android:fontFamily="@font/sfregular"
             android:textSize="18sp"
             android:layout_marginEnd="50dp"
+            android:textColor="@color/input_txt_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
