Hamza: AI Scan UI updated

--- a/app/src/main/res/layout/activity_ai_scan.xml
+++ b/app/src/main/res/layout/activity_ai_scan.xml
@@ -46,7 +46,7 @@
             <ImageView
                 android:id="@+id/userSelectedImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="450dp"
                 android:cropToPadding="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginHorizontal="20dp"
